<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/load_posts_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_posts" />

        <Button
            android:id="@+id/load_comments_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_comments" />

        <Button
            android:id="@+id/create_post_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_post" />

        <Button
            android:id="@+id/load_post_by_id_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_post_by_id" />

        <Button
            android:id="@+id/update_post_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_post" />

        <Button
            android:id="@+id/delete_post_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_post" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/post_id"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        tools:ignore="Autofill" />

</android.support.constraint.ConstraintLayout>